# crud_rust_actix_web

./: .gitignore  Cargo.toml  Dockerfile  index.html  readme.MD  setup.sh
db/: db.sql
migrations/2023-06-07-143027_create_user/: up.sql
migrations/2023-06-07-143122_create_todo/: up.sql
src/: app.old.rs  app.rs  controllers.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs  server.rs  utils.rs
src/app/db/: mod.rs
src/app/routes/: auth_route.rs  mod.rs  todo_route.rs
src/constants/: index.rs
src/controllers/: index.rs  user_controller.rs
src/models/: index.rs
src/routes/: index.rs  todo_route.rs  user_route.rs
src/utils/: index.rs
