[package]
name = "crud_actix_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.13.1"
diesel = { version = "1.4", features = ["sqlite","postgres","r2d2"] }
r2d2="0.8"
futures = "0.3"
dotenv = "0.15.0"